tests/error_messages/union_not_enum.rs
use rotalubat::Rotalubat;

#[derive(Rotalubat)]
union Jack {
    x: i32,
    y: u32,
}

fn main() {}
